# FluxHero

./: .dockerignore  .gitignore  AUDIT_TASKS.md  CHANGELOG.md  FLUXHERO_REQUIREMENTS.md  FLUXHERO_TASKS.md  FRONTEND_REQUIREMENTS.md  Makefile  PARALLEL_TEST_FINDINGS.md  PARALLEL_TEST_REQUIREMENTS.md  PROJECT_AUDIT.md  RALPHY_USAGE.md  README.md  REQUIREMENTS.md  TASKS.md  algorithmic-trading-guide.md  comparison_tasks.md  docker-compose.yml  enhancement_tasks.md  pyproject.toml  quant_trading_guide.md  requirements.txt  run-ralphy.sh
.context/: INDEX.md  history.md
.context/discovery/: architecture.md
.context/state/: checksums.yaml  current.yaml
.ralphy/: config.yaml  progress.txt  progress_archive.txt  progress_archive_20260121.txt
backend/amm_system/: __init__.py  computation.py  optimizer.py  runner.py  strategy.py
backend/analytics/: __init__.py  monte_carlo.py  numba_stats.py  quantstats_wrapper.py  report_generator.py
backend/api/: auth.py  rate_limit.py  server.py
backend/backtesting/: engine.py  fills.py  grid_search.py  metrics.py  walk_forward.py
backend/calibration/: __init__.py  parameter_store.py  percentile_calibrator.py  rolling_calibrator.py
backend/computation/: __init__.py  adaptive_ema.py  anticipation.py  golden_ema.py  indicators.py  volatility.py
backend/core/: config.py  logging_config.py
backend/data/: __init__.py  local_provider.py  provider.py  (+2 more)
docker/: .env.docker.example  Dockerfile.backend  Dockerfile.frontend
docs/: API_DOCUMENTATION.md  ASSUMPTIONS.md  BACKEND_DOCUMENTATION.md  BACKTESTING_EVALUATION.md  COMPARISON_SENTINEL_TRADER.md  DEPLOYMENT_GUIDE.md  DOCKER_DEPLOYMENT.md  GOLDEN_ADAPTIVE_INDICATORS.md  LIVE_PAPER_MODE_IMPLEMENTATION_PLAN.md  MAINTENANCE_GUIDE.md  PARALLEL_TEST_DATABASE_ANALYSIS.md  PARALLEL_TEST_PORT_ANALYSIS.md  RISK_MANAGEMENT.md  SYSTEM_OPERATIONS.md  TRADE_ANALYTICS_REQUIREMENTS.md  TRADING_SCENARIOS.md  UI_IMPROVEMENT_PLAN.md  USER_GUIDE.md
examples/: golden_adaptive_example.py
fluxhero/: README.md  requirements.txt
frontend/: FRONTEND_REQUIREMENTS.md  FRONTEND_TASKS.md  README.md  jest.config.js  jest.setup.js  middleware.ts  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts
notebooks/: compare_systems.ipynb
scripts/: download_multi_symbol_data.py  generate_report.py  run_backtest.py  run_grid_search.py  run_spy_backtest.py  seed_test_data.py
tests/: test_backtest_validation.py  test_regime_accuracy.py
(+266 files in other folders)
