[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fluxhero"
version = "0.1.0"
description = "FluxHero Quantitative Trading Platform"
requires-python = ">=3.10"
dependencies = [
    # Performance Computing
    "numba>=0.59.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",

    # Async I/O and Networking
    "httpx>=0.27.0",
    "websockets>=12.0",
    "aiofiles>=23.2.0",

    # Web Framework
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "python-multipart>=0.0.9",

    # Data Storage
    "pyarrow>=15.0.0",

    # Quantitative Analysis
    "quantstats>=0.0.62",
    "scipy>=1.12.0",
    "scikit-learn>=1.4.0",
    "yfinance>=0.2.36",

    # Utilities
    "python-dotenv>=1.0.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-n auto --cov=backend --cov-report=term-missing"
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
